stylesheets/livingstyleguide/_code.scss
.livingstyleguide--code-span,
.livingstyleguide--code-block {
  background: $livingstyleguide--code-background-color;
  color: $livingstyleguide--code-color;
  font-family: $livingstyleguide--code-font;
  font-size: $livingstyleguide--code-font-size;
  font-weight: $livingstyleguide--code-font-weight;
  overflow: scroll;
  padding: 0 3px;
  -webkit-font-smoothing: subpixel-antialiased;
  @include border-radius($livingstyleguide--code-border-radius);

  kbd {
    display: block;
    font-weight: bold;

    &:before {
      content: "> ";
    }
  }

  em {
    color: lighten($livingstyleguide--code-color, 10%);
    font-style: normal;
    font-weight: bold;
    text-decoration: underline;
  }

  b {
    color: lighten($livingstyleguide--code-color, 20%);
    font-weight: bold;
  }

  i {
    color: lighten($livingstyleguide--code-color, 30%);
  }

  q {
    color: lighten($livingstyleguide--code-color, 30%);
  }

  var {
    text-decoration: underline;
  }
}

.livingstyleguide--code-block {
  display: none;
  line-height: $livingstyleguide--code-line-height;
  padding: 3px 6px;
  width: $livingstyleguide--width;
  @include box-sizing(border-box);

  .show-code & {
    display: block;
  }
}

.livingstyleguide--example + .livingstyleguide--code-block {
  margin-top: 0;
  @include border-top-radius(0);
}

.livingstyleguide--layout-example + .livingstyleguide--code-block {
  background: $livingstyleguide--code-background-color;
  margin: 0 0 $livingstyleguide--gap-width;
  padding: $livingstyleguide--gap-width 0;
  width: 100%;
  @include border-radius(0);

  .livingstyleguide--code {
    display: block;
    margin: auto;
    width: $livingstyleguide--width;
  }
}

.livingstyleguide--font-example {
  @extend .livingstyleguide--example;
}

.livingstyleguide--code-highlight {
  background-color: $livingstyleguide--highlight-color;
  @include border-radius($livingstyleguide--highlight-border-radius);
}

.livingstyleguide--code-highlight-block {
  @extend .livingstyleguide--code-highlight;
  display: block;
}

